Added readme, easy database configuration rules

--- a/configuration.sample.json
+++ b/configuration.sample.json
@@ -5,5 +5,13 @@
   "info": {
     "phone": "",
     "email": "myitskilsAtGmail.com"
+  },
+  "useMysql":false,
+  "mysql": {
+    "host"    : "",
+    "database": "",
+    "user"    : "",
+    "password": "",
+    "port"    : ""
   }
 }
